# libONVIF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenSSLCommon.cmake
gsoap/: CMakeLists.txt
src/: CMakeLists.txt  global.h  namespaces.nsmap  onvif_analytics_client.cpp  onvif_analytics_client.h  onvif_client.cpp  onvif_client.h  onvif_device_client.cpp  onvif_device_client.h  onvif_display_client.cpp  onvif_display_client.h  onvif_event_client.cpp  onvif_event_client.h  onvif_imaging_client.cpp  onvif_imaging_client.h  onvif_media2_client.cpp  onvif_media2_client.h  onvif_media_client.cpp  onvif_media_client.h  onvif_ptz_client.cpp  onvif_ptz_client.h  onvif_receiver_client.cpp  onvif_receiver_client.h  onvif_recording_client.cpp  onvif_recording_client.h  onvif_replay_client.cpp  onvif_replay_client.h  onvif_search_client.cpp  onvif_search_client.h  request.h  response.h  soap_auth_handler.cpp  soap_auth_handler.h  soap_context.cpp  soap_context.h  topics.cpp  topics.h
